# hpacml

./: README.md  setup.sh
approx/: CMakeLists.txt
approx/cmake/: FindPAPI.cmake
approx/ml_test/: CMakeLists.txt  blackscholes.cpp  broadcast.cpp  nested.cpp  read.py  test.c  test.cpp
approx/ml_test/tests/: test_input1d.cpp  test_input1d_ovlp.cpp  test_input2d.cpp
approx/runtime/: approx.h  approx_runtime.cpp
approx/runtime/src/: CMakeLists.txt  approx_data_util.cpp  approx_data_util.h  approx_interface.cpp  approx_internal.h  approx_io.cpp  approx_io.h  approx_io_hdf5.cpp  approx_memoize_iact_in.cpp  approx_memoize_iact_in.h  approx_memoize_out.cpp  approx_pack.h  approx_petrubate.cpp  approx_profile.cpp  approx_profile.h  approx_profile_papi.cpp  approx_profile_papi.h  approx_runtime.cpp  approx_runtime_new.cpp  approx_surrogate.h  approx_surrogate_rti.cpp  approx_tech_profile.cpp  event.cpp  io_helpers.cpp  io_helpers.h  thread_storage.h
approx/runtime/src/database/: database.cpp  database.h
approx/runtime/src/include/: approx.h  approx_data.h  approx_debug.h  approx_tech_base.h  approx_tech_memo.h  approx_tech_perfo.h  approx_tech_profile.h  approx_types.h
approx/runtime/src/memory_pool/: memory_pool.cpp
approx/runtime/src/util/: approx_tensor.h
approx/test_parse/: t_decl.cpp  tf_decl.cpp
clang/: CMakeLists.txt
clang/include/clang/AST/: ASTContext.h  ASTNodeTraverser.h  ApproxClause.h  BuiltinTypes.def  ComputeDependence.h  DeclApprox.h  DeclBase.h  Expr.h  ExprApprox.h  RecursiveASTVisitor.h  StmtApprox.h
clang/include/clang/Basic/: Approx.h  DiagnosticParseKinds.td  DiagnosticSemaKinds.td  LangOptions.def  StmtNodes.td  TokenKinds.def
clang/include/clang/Driver/: Options.td
clang/include/clang/Parse/: Parser.h
clang/include/clang/Sema/: Scope.h  Sema.h
clang/include/clang/Serialization/: ASTBitCodes.h
clang/lib/AST/: ASTContext.cpp  ApproxClause.cpp  CMakeLists.txt  ComputeDependence.cpp  DeclApprox.cpp  DeclBase.cpp  DeclPrinter.cpp  Expr.cpp  ExprApprox.cpp  ExprClassification.cpp  ExprConstant.cpp  ItaniumMangle.cpp  NSAPI.cpp  Stmt.cpp  StmtApprox.cpp  StmtPrinter.cpp  StmtProfile.cpp  TextNodeDumper.cpp  Type.cpp  TypeLoc.cpp
clang/lib/CodeGen/: CGApproxRuntime.cpp  CGApproxRuntime.h  CGCall.cpp  CGDecl.cpp  CGExpr.cpp  CGStmt.cpp  CGStmtApprox.cpp  CMakeLists.txt  CodeGenFunction.h  CodeGenModule.cpp  CodeGenModule.h
clang/lib/Driver/ToolChains/: Clang.cpp
clang/lib/Frontend/: CompilerInvocation.cpp  InitPreprocessor.cpp
clang/lib/Parse/: ParseApprox.cpp  ParseExpr.cpp  ParsePragma.cpp  ParseStmt.cpp  Parser.cpp
clang/lib/Sema/: Sema.cpp  SemaApprox.cpp  SemaExceptionSpec.cpp  SemaExpr.cpp  SemaTemplateInstantiateDecl.cpp  TreeTransform.h
clang/lib/Serialization/: ASTCommon.cpp  ASTReader.cpp  ASTReaderDecl.cpp  ASTReaderStmt.cpp  ASTWriterDecl.cpp  ASTWriterStmt.cpp
clang/lib/StaticAnalyzer/Core/: ExprEngine.cpp
clang/tools/libclang/: CIndex.cpp
llvm/include/llvm/IR/: FixedMetadataKinds.def
test/: simplePragma.c
